2017-08-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r29405.

	* src/gsad_omp.c (create_report_omp, create_container_task_omp)
	(create_task_omp, create_agent_omp): XML escape name and comment.

2017-08-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r29402.

	* src/html/classic/omp.xsl (task-icons): Add new param
	enable-resume-when-scheduled.
	(task [details]): Enable the resume button for scheduled tasks.

2017-08-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r29351.

	* src/html/classic/js/greenbone.js ($(document).ready): Add a
	beforeunload event callback to stop the auto-refresh.

2017-07-28  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r29237.

	* src/gsad.c (init_validator): Add "auto_cache_rebuild".

	* src/gsad_omp.c (save_my_settings_omp): Add "Auto Cache Rebuild"
	setting.

	* src/html/classic/omp.xsl (get_my_settings, edit_my_settings): Add
	"Auto Cache Rebuild" setting.

2017-07-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (scanner [details], scanner): Disable clone
	button if the host is a unix socket.

2017-07-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-edit-scanner-form): Hide all fields
	except name and comment if the host is a unix socket.

2017-07-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r29003.

	* src/gsad_omp.c (save_scanner_omp): Save only name and comment if
	the host is a unix socket.

2017-07-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_dashboard.js
	(DashboardDisplay.prototype.init): Do not call resize here.
	(on_ready): Call resize on dashboard after it is fully initialized.

2017-07-06  Michael Wiegand <michael.wiegand@greenbone.net>

	* CHANGES: Start preparing changes for 7.0.3 release.

2017-07-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28938.

	* src/html/classic/help.xsl (credentials.html): Add description of the