@@ -1,3 +1,15 @@
+2017-09-05  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	Backport r29490 without ng parts.
+
+	Add new SMB alert method.
+
+	* src/gsad_gmp.c (append_alert_method_data): Add method data for new
+	SMB method.
+
+	* src/html/classic/omp.xsl (html-create-alert-form)
+	(html-edit-alert-form): Add selection and form fields for SMB method.
+
 2017-08-22  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	Backport r29405.
